--- a/national-postal-museum.html
+++ b/national-postal-museum.html
@@ -1,13 +1,11 @@
-
 <!DOCTYPE html>
-
-<html lang="id">
+<html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>National Postal Museum - Situs Pengetahuan</title>
-<meta content="The National Postal Museum, located in Washington, D.C., is the primary postal museum of the United States. It covers large portions of the postal his" name="description"/>
-<style>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Complete Guide to the National Postal Museum - Knowledge Site</title>
+    <meta content="Comprehensive guide to the Smithsonian's National Postal Museum in Washington D.C., featuring detailed exhibits, historical collections, visitor information, and the museum's role in preserving philatelic history." name="description"/>
+    <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 1200px; margin: 0 auto; padding: 20px; }
         .container { display: flex; }
         .content { flex: 3; padding-right: 20px; }
@@ -17,46 +15,274 @@
         img { max-width: 100%; height: auto; }
         footer { margin-top: 40px; padding-top: 20px; border-top: 1px solid #ddd; }
         .ad-container { margin: 20px 0; text-align: center; }
+        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
+        .museum-section { background: #f9f9f9; padding: 15px; margin: 15px 0; border-left: 4px solid #333; }
+        .exhibit-card { border: 1px solid #ddd; padding: 15px; margin-bottom: 20px; }
     </style>
 </head>
 <body>
 <nav>
-<a href="https://situsanda.com">Beranda</a>
-<a href="https://situsanda.com/kategori.html">Kategori</a>
+    <a href="https://yoursite.com">Home</a>
+    <a href="https://yoursite.com/categories.html">Categories</a>
 </nav>
 <div class="container">
-<div class="content">
-<h1>National Postal Museum</h1>
-<img alt="National Postal Museum" src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Air_mail_plane_at_National_Postal_Museum_IMG_4373.JPG"/>
-            
-            The National Postal Museum, located in Washington, D.C., is the primary postal museum of the United States. It covers large portions of the postal history of the United States and other countries. It was established through joint agreement between the United States Postal Service and the Smithsonian Institution and opened in 1993.<br/><br/><br/><br/><br/><br/>== Premises ==<br/><br/>The museum is located in the building that served as the main post office of Washington, D.C. for decades, from its construction in 1914 until 1986. The building was designed by the Graham and Burnham architectural firm, which was led by Ernest Graham following the death of Daniel Burnham in 1912. The headquarters of the United States Department of Labor's Bureau of Labor Statistics is based in this building, and there is also space for a data center for the United States Senate. It is located across the street from Washington Union Station.<br/><br/><br/><br/><br/><br/>== Displays ==<br/><br/>The museum's atrium features vehicles used to deliver mail throughout the history of the USPS, including planes, trains and automobiles. Historical exhibits guide visitors through the postal service's inception and expansion, as well as its role in significant national events such as World War II. "Systems at Work" explores historic and current technologies involved in mail processing and delivery, such as message boxes, ZIP codes, optical scanners and conveyor systems. <br/><br/>The museum holds the National Philatelic Collection.
-        </div>
-<div class="sidebar">
-<div class="ad-container">
-<script type="text/javascript">
-                            atOptions = {
-                                'key': '0cfd3aa635d270e67b5af101e4d64321',
-                                'format': 'iframe',
-                                'height': 250,
-                                'width': 300,
-                                'params': {}
-                            };
-                        </script>
-<script src="//padsims.com/0cfd3aa635d270e67b5af101e4d64321/invoke.js" type="text/javascript"></script>
-</div>
+    <div class="content">
+        <h1>Complete Guide to the National Postal Museum</h1>
+        <img alt="National Postal Museum atrium with mail plane" src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Air_mail_plane_at_National_Postal_Museum_IMG_4373.JPG"/>
+        
+        <p>The Smithsonian's National Postal Museum stands as America's premier institution dedicated to preserving and presenting the rich history of mail communication. Located just steps from Union Station in Washington D.C., this often-overlooked gem offers visitors an immersive journey through centuries of postal innovation, cultural impact, and technological advancement.</p>
 
-<h3>Artikel Terkait</h3>
-<ul>
-<li><a href="postal-voting-in-the-united-states.html">Postal voting in the United States</a></li>
-<li><a href="eureka,-nunavut.html">Eureka, Nunavut</a></li>
-<li><a href="nixie-(postal).html">Nixie (postal)</a></li>
-<li><a href="sri-hartamas.html">Sri Hartamas</a></li>
-<li><a href="list-of-postal-codes.html">List of postal codes</a></li>
-</ul>
-</div>
+        <h2>Historical Background</h2>
+        <p>The museum's origins trace back to the Smithsonian's long-standing interest in postal history:</p>
+
+        <div class="museum-section">
+            <strong>Key Milestones:</strong>
+            <ul>
+                <li><strong>1886</strong>: Smithsonian receives its first philatelic donation</li>
+                <li><strong>1970s</strong>: National Philatelic Collection established</li>
+                <li><strong>1990</strong>: USPS and Smithsonian agree to create museum</li>
+                <li><strong>July 30, 1993</strong>: Museum officially opens to public</li>
+                <li><strong>2013</strong>: Major renovation completed</li>
+            </ul>
+        </div>
+
+        <h2>Architectural Significance</h2>
+        <p>The museum occupies the historic City Post Office Building:</p>
+        <ul>
+            <li>Designed by Daniel Burnham's firm (completed by Ernest Graham)</li>
+            <li>Classical Revival architecture with Beaux-Arts influences</li>
+            <li>Original construction cost: $3 million (about $85 million today)</li>
+            <li>200,000 square feet of space (museum occupies 75,000 sq ft)</li>
+            <li>Notable features: 90-foot ceiling in atrium, marble floors, ornate detailing</li>
+        </ul>
+
+        <h2>Permanent Exhibits</h2>
+        <p>The museum's core exhibitions explore diverse aspects of postal history:</p>
+
+        <div class="exhibit-card">
+            <h3>Systems at Work</h3>
+            <p>This interactive exhibit demonstrates how mail moves from sender to recipient:</p>
+            <ul>
+                <li>Historic mail sorting equipment and processes</li>
+                <li>Working optical character recognition machines</li>
+                <li>Hands-on package sorting challenges</li>
+                <li>Evolution of ZIP codes and addressing systems</li>
+            </ul>
+        </div>
+
+        <div class="exhibit-card">
+            <h3>Binding the Nation</h3>
+            <p>Chronicles how mail service helped build American unity:</p>
+            <ul>
+                <li>Pony Express and Overland Mail displays</li>
+                <li>Railway mail service artifacts</li>
+                <li>Rural Free Delivery implementation</li>
+                <li>Impact on westward expansion</li>
+            </ul>
+        </div>
+
+        <div class="exhibit-card">
+            <h3>Customers and Communities</h3>
+            <p>Explores the human side of postal history:</p>
+            <ul>
+                <li>Historic post office interiors recreated</li>
+                <li>Personal stories of postal workers</li>
+                <li>Role in civil rights movement</li>
+                <li>Disaster response and humanitarian efforts</li>
+            </ul>
+        </div>
+
+        <h2>The National Philatelic Collection</h2>
+        <p>As the world's largest collection of stamps and philatelic materials:</p>
+        <ul>
+            <li>Over 6 million items in collection</li>
+            <li>Includes rare 1847 U.S. postage stamps</li>
+            <li>Inverted Jenny plane error stamps</li>
+            <li>Comprehensive collection of U.S. and international stamps</li>
+            <li>Rotating displays highlight different themes</li>
+        </ul>
+
+        <h2>Notable Artifacts</h2>
+        <p>The museum houses extraordinary pieces of postal history:</p>
+
+        <table>
+            <tr>
+                <th>Artifact</th>
+                <th>Description</th>
+                <th>Significance</th>
+            </tr>
+            <tr>
+                <td>Owney the Postal Dog</td>
+                <td>Stuffed remains of famous mail mascot</td>
+                <td>Beloved 19th century railway mail dog</td>
+            </tr>
+            <tr>
+                <td>Wisconsin Pony Express Letter</td>
+                <td>1851 letter carried by private mail service</td>
+                <td>Pre-dates official Pony Express</td>
+            </tr>
+            <tr>
+                <td>Hindenburg Crash Mail</td>
+                <td>Surviving mail from 1937 disaster</td>
+                <td>Rare aerophilatelic artifact</td>
+            </tr>
+            <tr>
+                <td>Civil War "Soldier's Mail"</td>
+                <td>Collection of wartime correspondence</td>
+                <td>Documents personal experiences</td>
+            </tr>
+        </table>
+
+        <h2>Transportation Collection</h2>
+        <p>The museum's atrium features an impressive array of mail vehicles:</p>
+        <ul>
+            <li><strong>1931 Ford Model A mail truck</strong>: Standard urban delivery vehicle</li>
+            <li><strong>1913 mail wagon</strong>: Horse-drawn predecessor</li>
+            <li><strong>De Havilland DH-4 airplane</strong>: Early airmail carrier</li>
+            <li><strong>Railway mail car</strong>: Complete sorting facility on rails</li>
+            <li><strong>1980s Long Life Vehicle</strong>: Iconic USPS truck</li>
+        </ul>
+
+        <h2>Educational Programs</h2>
+        <p>The museum offers diverse learning opportunities:</p>
+
+        <h3>For Students</h3>
+        <ul>
+            <li>Curriculum-based school tours</li>
+            <li>Stamp collecting workshops</li>
+            <li>History of communication programs</li>
+        </ul>
+
+        <h3>For Adults</h3>
+        <ul>
+            <li>Expert lecture series</li>
+            <li>Philatelic research opportunities</li>
+            <li>Behind-the-scenes collection tours</li>
+        </ul>
+
+        <h3>For Families</h3>
+        <ul>
+            <li>Interactive discovery stations</li>
+            <li>Hands-on activity carts</li>
+            <li>Storytime programs</li>
+        </ul>
+
+        <h2>Research Facilities</h2>
+        <p>The museum supports scholarly work through:</p>
+        <ul>
+            <li>Ruth E. Dickes Research Library (15,000+ volumes)</li>
+            <li>Archival collections of postal documents</li>
+            <li>Expert curatorial staff available for consultation</li>
+            <li>Online catalog of collections</li>
+        </ul>
+
+        <h2>Special Exhibitions</h2>
+        <p>Rotating exhibits explore specialized topics:</p>
+        <ul>
+            <li><strong>Women in the Mail</strong>: Female postal workers' contributions</li>
+            <li><strong>Postal Inspectors</strong>: Law enforcement history</li>
+            <li><strong>Art of the Stamp</strong>: Miniature masterpieces</li>
+            <li><strong>Holiday Mail</strong>: Seasonal traditions</li>
+        </ul>
+
+        <h2>Visitor Information</h2>
+        <p>Practical details for planning a visit:</p>
+
+        <table>
+            <tr>
+                <th>Category</th>
+                <th>Details</th>
+            </tr>
+            <tr>
+                <td>Location</td>
+                <td>2 Massachusetts Ave NE, Washington DC</td>
+            </tr>
+            <tr>
+                <td>Hours</td>
+                <td>10am-5:30pm daily (closed Dec 25)</td>
+            </tr>
+            <tr>
+                <td>Admission</td>
+                <td>Free (Smithsonian museum)</td>
+            </tr>
+            <tr>
+                <td>Metro Access</td>
+                <td>Union Station (Red Line)</td>
+            </tr>
+            <tr>
+                <td>Accessibility</td>
+                <td>Fully wheelchair accessible</td>
+            </tr>
+        </table>
+
+        <h2>Digital Resources</h2>
+        <p>The museum offers extensive online content:</p>
+        <ul>
+            <li>Virtual tours of key exhibits</li>
+            <li>Online stamp collection database</li>
+            <li>Educational videos and podcasts</li>
+            <li>Digital exhibitions</li>
+            <li>Research tools for collectors</li>
+        </ul>
+
+        <h2>Cultural Significance</h2>
+        <p>The museum preserves important aspects of American life:</p>
+        <ul>
+            <li>Documents communication revolutions</li>
+            <li>Showcases graphic design through stamps</li>
+            <li>Preserves stories of everyday Americans</li>
+            <li>Highlights technological innovation</li>
+        </ul>
+    </div>
+    <div class="sidebar">
+        <div class="ad-container">
+            <script type="text/javascript">
+                atOptions = {
+                    'key': '0cfd3aa635d270e67b5af101e4d64321',
+                    'format': 'iframe',
+                    'height': 250,
+                    'width': 300,
+                    'params': {}
+                };
+            </script>
+            <script src="//padsims.com/0cfd3aa635d270e67b5af101e4d64321/invoke.js" type="text/javascript"></script>
+        </div>
+
+        <h3>Related Articles</h3>
+        <ul>
+            <li><a href="postal-voting-in-the-united-states.html">US Postal Service history</a></li>
+            <li><a href="eureka,-nunavut.html">Remote mail delivery</a></li>
+            <li><a href="nixie-(postal).html">Undeliverable mail</a></li>
+            <li><a href="sri-hartamas.html">International postal systems</a></li>
+            <li><a href="list-of-postal-codes.html">Global postal codes</a></li>
+            <li><a href="smithsonian-museums.html">Other Smithsonian museums</a></li>
+            <li><a href="history-of-communication.html">Evolution of communication</a></li>
+        </ul>
+
+        <h3>Museum Quick Facts</h3>
+        <ul>
+            <li>Established: 1993</li>
+            <li>Collection Size: 6+ million items</li>
+            <li>Annual Visitors: 400,000+</li>
+            <li>Building Size: 200,000 sq ft</li>
+            <li>Smithsonian Affiliation: 1990</li>
+        </ul>
+
+        <h3>Must-See Exhibits</h3>
+        <ul>
+            <li>Inverted Jenny display</li>
+            <li>Owney the Postal Dog</li>
+            <li>Mail planes hanging in atrium</li>
+            <li>Historic post office interiors</li>
+            <li>Stamp production demonstration</li>
+        </ul>
+    </div>
 </div>
 <footer>
-<p>© 2023 Situs Pengetahuan</p>
+    <p>© 2023 Knowledge Site. All rights reserved.</p>
+    <p>Last updated: March 2024</p>
 </footer>
 </body>
 </html>
